--- a/src/app/alino-app/components/navbar/home-card/HomeCard.module.css
+++ b/src/app/alino-app/components/navbar/home-card/HomeCard.module.css
@@ -21,13 +21,13 @@
   height: 200px;
   position: absolute;
   left: -200px;
-  opacity: 0.05;
+  opacity: 0.1;
   transition: box-shadow 0.3s ease-in-out;
   z-index: 0;
 }
 
 .container:hover {
-  background-color: rgb(250, 250, 250) !important;
+  background-color: var(--background-over-container) !important;
 }
 
 .container:hover .cardFx {
@@ -61,6 +61,15 @@
   white-space: nowrap;
   text-overflow: ellipsis;
   padding-left: 5px;
+  font-weight: 500;
+  background: var(--text);
+  /* background-size: 200% auto; */
+  background-repeat: no-repeat;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  background-clip: text;
+  font-size: 14px;
+  font-weight: 500;
 }
 
 .listManagerContainer {
@@ -80,7 +89,7 @@
   align-items: center;
   width: 23px;
   height: 23px;
-  background-color: rgb(250, 250, 250);
+  background-color: var(--background-over-container);
   border-radius: 5px;
 }
 
@@ -91,7 +100,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  color: rgb(210, 210, 210);
+  color: var(--text-not-available);
   font-size: 12px;
 }
 
