--- a/src/app/alino-app/components/navbar/list-card/ListCard.module.css
+++ b/src/app/alino-app/components/navbar/list-card/ListCard.module.css
@@ -27,7 +27,7 @@
 }
 
 .container:hover {
-  background-color: rgb(250, 250, 250) !important;
+  background-color: var(--background-over-container) !important;
 }
 
 .container:hover .cardFx {
@@ -67,14 +67,14 @@
   width: 100%;
   height: 100%;
   border: none;
-  color: #1c1c1c;
+  color: var(--text);
   outline: none;
   background-color: transparent;
   font-size: 14px;
   overflow: hidden;
   white-space: nowrap;
   text-overflow: ellipsis;
-  background-color: #0000000d;
+  background-color: var(--background-over-container);
   border-radius: 10px;
   padding-left: 5px;
 }
@@ -143,9 +143,9 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  color: rgb(210, 210, 210);
+  color: var(--text-not-available);
   font-size: 12px;
-  background-color: rgb(250, 250, 250);
+  background-color: var(--background-over-container);
   border-radius: 5px;
 }
 
