--- a/src/app/alino-app/components/navbar/navbar/navbar.module.css
+++ b/src/app/alino-app/components/navbar/navbar/navbar.module.css
@@ -6,7 +6,7 @@
   left: 0;
   z-index: 100;
   border: none;
-  background-color: rgb(255, 255, 255);
+  background-color: var(--background-over-container);
   border-radius: 10px;
   -webkit-tap-highlight-color: transparent;
   display: flex;
@@ -23,6 +23,8 @@
   align-items: center;
   /* padding: 25px; */
   z-index: 100;
+  /* transform: translateX(0); */
+  left: -150%;
 }
 
 .navbar {
@@ -104,10 +106,9 @@
 @media only screen and (max-width: 850px) {
   .container {
     position: absolute;
-    width: 75%;
+    width: 80%;
     height: 100%;
     min-width: inherit;
-    left: 0;
   }
 
   .active {
