--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,14 +1,34 @@
 :root {
   --background-alino-app: rgb(240, 240, 240);
+  --background-alino-app-translucent: rgba(240, 240, 240, 0.5);
   --background-container: rgb(255, 255, 255);
+  --background-over-container: rgba(0, 0, 0, 0.025);
+  --background-over-container-hover: rgba(0, 0, 0, 0.05);
+  --border-container-color: rgb(240, 240, 240);
+  --hover-over-container: rgb(250, 250, 250);
   --text: #1c1c1c;
+  --text-not-available: #bbbbbb;
+  --icon-color: #1c1c1c;
+  --icon-colorv2: #1c1c1c;
+  --icon-colo-inside: #fff;
+  --placeholder-text-color: rgb(142, 142, 142);
 }
 
 /* Variables para tema oscuro */
 [data-theme="dark"] {
-  --background-alino-app: rgb(30, 30, 30);
-  --background-container: rgb(50, 50, 50);
+  --background-alino-app: rgb(36, 38, 41);
+  --background-alino-app-translucent: rgba(36, 38, 41, 0.5);
+  --background-container: rgb(44, 47, 53);
+  --background-over-container: rgba(255, 255, 255, 0.05);
+  --background-over-container-hover: rgba(255, 255, 255, 0.1);
+  --border-container-color: rgb(54, 57, 63);
+  --hover-over-container: rgb(54, 57, 63);
   --text: #ffffff;
+  --text-not-available: #7a7a7a;
+  --icon-color: #959ba3;
+  --icon-colorv2: #fff;
+  --icon-color-inside: #1c1c1c;
+  --placeholder-text-color: rgb(142, 142, 142);
 }
 
 * {
@@ -20,14 +40,13 @@
 
 html,
 body {
-  background-color: var(--background-alino-app);
+  background-color: BLACK;
   position: relative;
   max-width: 100vw;
   height: 100%;
   font-family: var(--font-inter), sans-serif;
   /* background-color: #f0f0f0; */
   perspective: 1000px;
-  overflow: hidden !important;
 }
 
 a {
