--- a/src/components/ui/color-picker/ColorPicker.module.css
+++ b/src/components/ui/color-picker/ColorPicker.module.css
@@ -48,8 +48,8 @@
   max-width: 265px;
   min-width: 265px;
   height: 241px;
-  background-color: rgb(255, 255, 255);
-  border: 1px solid rgb(240, 240, 240);
+  background-color: var(--background-container);
+  border: 1px solid var(--border-container-color);
   border-radius: 15px;
   flex-direction: column;
   gap: 10px;
@@ -72,12 +72,12 @@
   position: relative;
   display: flex;
   padding: 5px 5px;
-  border: 1px solid rgb(250, 250, 250);
+  border: 1px solid var(--border-container-color);
   border-radius: 10px;
 }
 
 .titleSelector {
-  background-color: rgb(245, 245, 245);
+  background-color: var(--border-container-color);
   z-index: -1;
   height: 25px;
   width: 115.5px;
@@ -88,7 +88,6 @@
 .title {
   font-size: 12px;
   font-weight: 500;
-  color: rgb(200, 200, 200);
   border: none;
   background-color: transparent;
   background: none;
@@ -102,7 +101,7 @@
 .separator {
   width: 100%;
   height: 1px;
-  background-color: rgb(245, 245, 245);
+  background-color: var(--border-container-color);
 }
 
 .colorSelectorContainer {
@@ -225,9 +224,9 @@
   border: none;
   font-size: 15px;
   outline-style: none;
-  color: #1c1c1c;
+  color: var(--text);
   font-weight: 500;
-  background-color: rgb(245, 245, 245);
+  background-color: var(--background-over-container);
   border-radius: 5px;
   padding: 5px 10px;
 }
