--- a/src/components/ui/list-info-edit/ListInfoEdit.module.css
+++ b/src/components/ui/list-info-edit/ListInfoEdit.module.css
@@ -31,14 +31,14 @@
   width: 100%;
   height: 100%;
   border: none;
-  color: #1c1c1c;
+  color: var(--text);
   outline: none;
   background-color: transparent;
   font-size: 14px;
   overflow: hidden;
   white-space: nowrap;
   text-overflow: ellipsis;
-  background-color: #0000000d;
+  background-color: var(--background-over-container);
   border-radius: 10px;
   padding-left: 5px;
 }
