--- a/src/app/alino-app/components/config-section/ConfigSection.module.css
+++ b/src/app/alino-app/components/config-section/ConfigSection.module.css
@@ -18,7 +18,7 @@
   align-items: center;
   cursor: pointer;
   transition: background-color 0.2s;
-  background-color: #fff;
+  background-color: var(--background-over-container);
   -webkit-tap-highlight-color: transparent;
   overflow: hidden;
   padding: 2px;
@@ -36,5 +36,6 @@
   background-position: center;
   background-repeat: no-repeat;
   border-radius: 8px;
-  background-color: rgb(250, 250, 250);
+  background-color: var(--background-container);
+  opacity: 0.3;
 }
