--- a/src/components/ui/modal-options-box/modalBox/ModalBox.module.css
+++ b/src/components/ui/modal-options-box/modalBox/ModalBox.module.css
@@ -1,7 +1,7 @@
 .container {
   position: absolute;
-  background-color: rgb(255, 255, 255);
-  border: 1px solid rgb(240, 240, 240);
+  background-color: var(--background-container);
+  border: 1px solid var(--border-container-color);
   width: -moz-fit-content;
   width: fit-content;
   height: -moz-fit-content;
@@ -10,7 +10,7 @@
   display: flex;
   flex-direction: column;
   gap: 10px;
-  padding: 15px 5px 15px 5px;
+  padding: 15px 5px 5px 5px;
   z-index: 100;
   box-shadow:
     rgba(12, 20, 66, 0.02) 0px 4px 12px,
@@ -22,15 +22,17 @@
   top: 110%;
   right: 0;
 }
+
 .title {
-  color: rgb(200, 200, 200);
+  color: var(--text-not-available);
   font-size: 12px;
   font-weight: 500;
   padding-left: 10px;
   padding-right: 10px;
 }
+
 .separator {
   width: 100%;
   height: 1px;
-  background-color: rgb(240, 240, 240);
+  background-color: var(--border-container-color);
 }
