--- a/src/components/ui/modal-options-box/optionBox/OptionBox.module.css
+++ b/src/components/ui/modal-options-box/optionBox/OptionBox.module.css
@@ -1,7 +1,7 @@
 .box {
   width: 100%;
   height: 30px;
-  border-radius: 5px;
+  border-radius: 10px;
   cursor: pointer;
   transition: background-color 0.1s ease-in-out;
   display: flex;
@@ -12,4 +12,5 @@
   font-size: 13px;
   text-wrap: nowrap;
   gap: 5px;
+  color: var(--text);
 }
