--- a/src/app/alino-app/components/accountConfigSection/AccountConfigSection.module.css
+++ b/src/app/alino-app/components/accountConfigSection/AccountConfigSection.module.css
@@ -20,13 +20,13 @@
 
 .sectionTitle {
   font-size: 12px;
-  color: rgb(150, 150, 150);
+  color: var(--text-not-available);
   padding: 0 15px;
 }
 
 .configSection {
   position: relative;
-  background-color: rgb(250, 250, 250);
+  background-color: var(--background-over-container);
   border-radius: 10px;
   padding: 10px 15px;
   width: 100%;
@@ -49,17 +49,17 @@
 .configElementSeparator {
   width: 100%;
   height: 1px;
-  background-color: rgb(230, 230, 230);
+  background-color: var(--border-container-color);
 }
 
 .configSectionTitle {
   font-size: 14px;
-  color: #1c1c1c;
+  color: var(--text);
 }
 
 .configSectionDescription {
   font-size: 12px;
-  color: rgb(150, 150, 150);
+  color: var(--text-not-available);
   padding: 0 15px;
 }
 
