--- a/src/app/alino-app/components/todo/task-input/task-input.module.css
+++ b/src/app/alino-app/components/todo/task-input/task-input.module.css
@@ -25,7 +25,7 @@
   justify-content: start;
   align-items: start;
   border-radius: 15px;
-  background-color: #ffffff;
+  background-color: var(--background-container);
   /* overflow: hidden; */
   padding: 0px 15px 0px 10px;
   box-shadow:
@@ -54,7 +54,7 @@
 
   font-size: 14px;
   font-family: inherit;
-  color: #1c1c1c;
+  color: var(--text);
   resize: none;
   overflow: hidden;
   white-space: pre-wrap;
@@ -74,7 +74,7 @@
 }
 
 .input::placeholder {
-  color: #8e8e8e;
+  color: var(--placeholder-text-color);
 }
 
 .placeholder {
@@ -93,7 +93,7 @@
   right: 10px;
   bottom: -15px;
   font-size: 9px;
-  color: #8a8a8a;
+  color: var(--text-not-available);
 }
 
 .dropdownItemContainer {
@@ -108,7 +108,7 @@
   text-overflow: ellipsis;
   width: 100%;
   overflow: hidden;
-  color: #1c1c1c;
+  color: var(--text);
 }
 
 .taskSendButton {
