--- a/src/components/ui/calendar/DayPicker.css
+++ b/src/components/ui/calendar/DayPicker.css
@@ -92,7 +92,7 @@
   width: var(--rdp-day-width);
   height: var(--rdp-day-height);
   text-align: center;
-  color: #1c1c1c;
+  color: var(--text);
   padding: 2px;
 }
 
@@ -122,7 +122,7 @@
 
 .rdp-caption_label {
   z-index: 1;
-  color: #1c1c1c;
+  color: var(--text);
 
   position: relative;
   display: inline-flex;
@@ -154,8 +154,8 @@
   position: relative;
   appearance: none;
 
-  background-color: rgb(250, 250, 250);
-  border: solid 1px rgb(240, 240, 240);
+  background-color: var(--background-over-container);
+  border: solid 1px var(--border-container-color);
   border-radius: 10px;
 
   -webkit-tap-highlight-color: transparent;
@@ -281,13 +281,14 @@
 }
 
 .rdp-today .rdp-day_button {
-  background-color: rgb(250, 250, 250);
+  background-color: var(--border-container-color);
+  font-weight: 700;
 }
 
 .rdp-selected {
   /* font-weight: bold; */
   /* font-size: large; */
-  color: #fff !important;
+  color: var(--text) !important;
 }
 
 .rdp-selected .rdp-day_button {
