--- a/src/components/ui/calendar/hour/Hour.module.css
+++ b/src/components/ui/calendar/hour/Hour.module.css
@@ -35,7 +35,7 @@
 }
 
 .button:hover:not(:disabled) {
-  background-color: rgb(240, 240, 240);
+  background-color: var(--background-over-container);
 }
 
 .button:disabled {
@@ -51,15 +51,15 @@
   font-size: 18px;
   font-weight: 500;
   text-align: center;
-  color: #1c1c1c;
+  color: var(--text);
   border: none;
   outline: none;
   display: flex;
   justify-content: center;
   align-items: center;
   user-select: none;
-  background-color: rgb(250, 250, 250);
-  border: 1px solid rgb(245, 245, 245);
+  background-color: var(--background-over-container);
+  border: 1px solid var(--border-container-color);
   border-radius: 10px;
   -webkit-user-select: none;
 }
@@ -72,7 +72,7 @@
 .separator {
   font-size: 20px;
   font-weight: 500;
-  color: #1c1c1c;
+  color: var(--text);
   user-select: none;
 }
 
