--- a/src/components/ui/confirmation-modal/ConfirmationModal.module.css
+++ b/src/components/ui/confirmation-modal/ConfirmationModal.module.css
@@ -15,7 +15,7 @@
   position: relative;
   width: 350px;
   height: 200px;
-  background-color: #fff;
+  background-color: var(--background-container);
   border-radius: 20px;
   box-shadow:
     rgba(12, 20, 66, 0.02) 0px 4px 12px,
@@ -26,6 +26,7 @@
   flex-direction: column;
   justify-content: space-between;
   align-items: center;
+  border: 1px solid var(--border-container-color);
 }
 
 .modalTexts {
@@ -33,6 +34,7 @@
   flex-direction: column;
   gap: 5px;
   width: 100%;
+  color: var(--text);
 }
 
 .modalTitle {
@@ -58,9 +60,16 @@
   width: 100%;
   height: 40px;
   border: none;
-  background-color: rgb(240, 240, 240);
+  background-color: var(--background-over-container);
   border-radius: 10px;
   cursor: pointer;
+  color: var(--text);
+  border: 1px solid var(--border-container-color);
+  transition: background-color 0.3s ease-in-out;
+}
+
+.modalButton:hover {
+  background-color: var(--background-over-container-hover);
 }
 
 @media only screen and (max-width: 850px) and (display-mode: standalone) {
