--- a/src/components/ui/window-component/window-component.module.css
+++ b/src/components/ui/window-component/window-component.module.css
@@ -12,7 +12,7 @@
 
 .window {
   position: relative;
-  background-color: #fff;
+  background-color: var(--background-container);
   border-radius: 20px;
   box-shadow:
     rgba(12, 20, 66, 0.02) 0px 4px 12px,
@@ -46,7 +46,7 @@
 .headerParaph {
   font-size: 24px;
   font-weight: 600;
-  color: rgb(200, 200, 200);
+  color: var(--text-not-available);
 }
 .headerCross {
   width: fit-content;
