--- a/src/app/(auth)/components/AuthForm.module.css
+++ b/src/app/(auth)/components/AuthForm.module.css
@@ -11,12 +11,13 @@
 
 .authFormTitle {
   color: #1c1c1c;
-  font-size: 28px;
+  font-size: 22px;
   margin-bottom: 8px;
+  font-weight: 600;
 }
 
 .authFormDescription {
-  color: #1c1c1c;
+  color: #7a7a7a;
   font-size: 16px;
 }
 
@@ -110,5 +111,6 @@
 .authFormOAuthButtons {
   width: 100%;
   display: flex;
+  flex-direction: column;
   gap: 15px;
 }
