--- a/src/app/alino-app/components/accountConfigSection/AccountConfigSection.module.css
+++ b/src/app/alino-app/components/accountConfigSection/AccountConfigSection.module.css
@@ -42,7 +42,7 @@
   justify-content: space-between;
   align-items: center;
   gap: 10px;
-  height: 26px;
+  min-height: 26px;
   width: 100%;
 }
 
