--- a/src/app/alino-app/components/todo/manager/manager.module.css
+++ b/src/app/alino-app/components/todo/manager/manager.module.css
@@ -27,10 +27,10 @@
 .section1::before {
   content: "";
   position: absolute;
-  left: -20px;
+  left: -50px;
   bottom: -20px;
-  height: calc(100% + 20px);
-  width: calc(100% + 40px);
+  height: calc(100% + 35px);
+  width: calc(100% + 100px);
   mask-image: linear-gradient(rgb(0, 0, 0) 85%, transparent);
   backdrop-filter: blur(10px);
   z-index: 25;
@@ -189,6 +189,10 @@
   align-items: center;
   gap: 10px;
   border-radius: 20px;
+}
+
+.empty {
+  color: var(--text-not-available);
 }
 
 @media only screen and (max-width: 850px) {
