--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -45,8 +45,8 @@ body {
   position: relative;
   max-width: 100vw;
   height: 100%;
+  width: 100%;
   font-family: var(--font-inter), sans-serif;
-  /* background-color: #f0f0f0; */
   perspective: 1000px;
 }
 
