--- a/src/components/ui/loader/loader.module.css
+++ b/src/components/ui/loader/loader.module.css
@@ -4,12 +4,13 @@
   left: 0;
   width: 100svw;
   height: 100svh;
-  background-color: rgba(255, 255, 255, 0.8);
+  background-color: rgba(0, 0, 0, 0.3);
   display: flex;
   justify-content: center;
   align-items: center;
-  z-index: 10000;
+  z-index: 1000;
   user-select: none;
+  backdrop-filter: blur(10px);
 }
 
 .icon {
