--- a/src/components/ui/text-titles-animation/TextTitlesAnimation.module.css
+++ b/src/components/ui/text-titles-animation/TextTitlesAnimation.module.css
@@ -1,7 +1,10 @@
 .wrapper {
   display: inline-block;
-  /* overflow: hidden; */
   position: relative;
+  height: 100%;
+  width: 100%;
+  display: flex;
+  align-items: center;
 }
 
 .character {
