--- a/src/components/ui/toaster/Toaster.module.css
+++ b/src/components/ui/toaster/Toaster.module.css
@@ -3,18 +3,20 @@
   min-width: 356px;
   /* min-height: 70px; */
   height: fit-content;
-  background-color: #fff;
+  background-color: var(--background-container);
+  border: 1px solid var(--border-container-color);
   border-radius: 20px;
   box-shadow:
     0 4px 12px #0c144205,
     0 30px 80px #0c144214,
     inset 0 0 #e6e9ed;
-  z-index: 10000;
+  z-index: 999;
   padding: 15px 20px;
   display: flex;
   justify-content: center;
   align-items: center;
   gap: 20px;
+  backdrop-filter: blur(100px);
 }
 
 .iconSection {
@@ -34,10 +36,10 @@
 .title {
   font-size: 16px;
   font-weight: 600;
-  color: #1c1c1c;
+  color: var(--text);
 }
 
 .text {
   font-size: 16px;
-  color: #1c1c1c;
+  color: var(--text);
 }
