--- a/src/app/alino-app/components/config-modal/AccountConfigSection.module.css
+++ b/src/app/alino-app/components/config-modal/AccountConfigSection.module.css
@@ -1,13 +1,9 @@
-.body {
+.configModalContainer {
   width: 100%;
   height: 100%;
   display: flex;
-  flex-direction: row;
-  gap: 30px;
-  user-select: none;
-  -webkit-user-select: none;
-  -ms-user-select: none;
-  -moz-user-select: none;
+  flex-direction: column;
+  gap: 25px;
 }
 
 .sectionContainer {
@@ -24,26 +20,26 @@
   padding: 0 15px;
 }
 
-.configSection {
+.sectionContent {
   position: relative;
-  background-color: var(--background-over-container);
-  border-radius: 10px;
-  padding: 10px 15px;
   width: 100%;
   display: flex;
   flex-direction: column;
   gap: 10px;
+  background-color: var(--background-over-container);
+  border-radius: 10px;
+  padding: 10px 15px;
 }
 
-.configElement {
+.sectionElement {
   position: relative;
+  width: 100%;
+  min-height: 26px;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
   align-items: center;
   gap: 10px;
-  min-height: 26px;
-  width: 100%;
 }
 
 .configElementSeparator {
@@ -52,18 +48,18 @@
   background-color: var(--border-container-color);
 }
 
-.configSectionTitle {
+.sectionText {
   font-size: 14px;
   color: var(--text);
 }
 
-.configSectionDescription {
+.sectionDescription {
   font-size: 12px;
   color: var(--text-not-available);
   padding: 0 15px;
 }
 
-.switchSection {
+.sectionAction {
   position: relative;
   display: flex;
   justify-content: center;
@@ -72,7 +68,7 @@
 }
 
 @media only screen and (max-width: 850px) {
-  .body {
+  .configModalContainer {
     flex-direction: column;
     gap: 20px;
   }
