--- a/src/components/ui/confirmation-modal/ConfirmationModal.module.css
+++ b/src/components/ui/confirmation-modal/ConfirmationModal.module.css
@@ -1,35 +1,34 @@
-.backgroundModal {
+.confirmationModalBackground {
   position: absolute;
-  background-color: rgb(0, 0, 0, 0.1);
   width: 100%;
   height: 100%;
   top: 0;
   left: 0;
-  z-index: 1000;
   display: flex;
   justify-content: center;
   align-items: center;
+  z-index: 900;
 }
 
-.modalContainer {
+.confirmationModalContainer {
   position: relative;
   width: 350px;
   height: 200px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
   background-color: var(--background-container);
+  border: 1px solid var(--border-container-color);
   border-radius: 20px;
   box-shadow:
     rgba(12, 20, 66, 0.02) 0px 4px 12px,
     rgba(12, 20, 66, 0.08) 0px 30px 80px,
     rgb(230, 233, 237) 0px 0px 0px 0px inset;
   padding: 30px;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  align-items: center;
-  border: 1px solid var(--border-container-color);
 }
 
-.modalTexts {
+.confirmationModalText {
   display: flex;
   flex-direction: column;
   gap: 5px;
@@ -37,18 +36,18 @@
   color: var(--text);
 }
 
-.modalTitle {
+.confirmationModalTitle {
   width: 100%;
   font-weight: 700;
   font-size: 15px;
   text-align: left;
 }
 
-.modalAdditionalText {
+.confirmationModalAdditionalText {
   font-size: 13px;
 }
 
-.modalButtons {
+.confirmationModalButtons {
   width: 100%;
   display: flex;
   justify-content: center;
@@ -56,7 +55,7 @@
   gap: 15px;
 }
 
-.modalButton {
+.confirmationModalButton {
   width: 100%;
   height: 40px;
   border: none;
@@ -68,7 +67,7 @@
   transition: background-color 0.3s ease-in-out;
 }
 
-.modalButton:hover {
+.confirmationModalButton:hover {
   background-color: var(--background-over-container-hover);
 }
 
@@ -77,7 +76,7 @@
 }
 
 @media only screen and (max-width: 850px) and (display-mode: standalone) {
-  .backgroundModal {
+  .confirmationModalBackground {
     height: 100vh;
   }
 }
