--- a/src/app/alino-app/components/notifications/notifications.module.css
+++ b/src/app/alino-app/components/notifications/notifications.module.css
@@ -30,15 +30,14 @@
   right: 4px;
   background-color: #ef4444;
   color: white;
-  width: 18px;
-  height: 18px;
+  width: 15px;
+  height: 15px;
   border-radius: 50%;
-  font-size: 11px;
-  font-weight: 600;
+  font-size: 10px;
+  font-weight: 500;
   display: flex;
   align-items: center;
   justify-content: center;
-  line-height: 1;
   pointer-events: none;
   border: 2px solid var(--background-over-container);
 }
@@ -70,11 +69,10 @@
 .notificationItem {
   display: flex;
   flex-direction: column;
-  gap: 12px;
+  gap: 5px;
   padding: 12px;
-  background-color: var(--background-secondary);
+  background-color: var(--background-over-container-hover);
   border-radius: 6px;
-  border: 1px solid var(--border-color);
 }
 
 .notificationInfo {
@@ -82,11 +80,12 @@
   flex-direction: column;
   gap: 4px;
   font-size: 14px;
+  color: var(--text);
 }
 
 .notificationInfo small {
   font-size: 12px;
-  color: var(--text-muted);
+  color: var(--text);
 }
 
 .notificationActions {
