--- a/src/app/alino-app/components/initial-user-configuration/InitialUserConfiguration.module.css
+++ b/src/app/alino-app/components/initial-user-configuration/InitialUserConfiguration.module.css
@@ -2,7 +2,7 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
-  align-items: center;
+  align-items: left;
   gap: 10px;
   /* padding: 25px 0; */
   padding-top: 20px;
@@ -13,15 +13,9 @@
   display: flex;
   flex-direction: column;
   gap: 10px;
+  font-weight: 300;
 }
 
 .subtitle {
-  color: var(--text);
-}
-
-.username {
-  background-color: var(--background-over-container-hover);
-  padding: 10px 15px;
-  border-radius: 10px;
   color: var(--text);
 }
