--- a/src/app/alino-app/components/initial-user-configuration/UsernameInput.module.css
+++ b/src/app/alino-app/components/initial-user-configuration/UsernameInput.module.css
@@ -1,9 +1,18 @@
-.alinoUsernameInputWrapper {
+.container {
   display: flex;
+  flex-direction: row;
+  justify-content: center;
   align-items: center;
-  gap: 8px;
   width: 100%;
   height: 45px;
+  gap: 8px;
+}
+
+.alinoUsernameInputWrapper {
+  display: flex;
+  flex-direction: column;
+  align-items: left;
+  justify-content: center;
 }
 
 .alinoUsernameInput {
@@ -45,17 +54,17 @@
 
 .alinoSubmitBtn {
   border: none;
-  background: linear-gradient(
-    180deg,
-    rgba(0, 122, 255, 1) 0%,
-    rgba(0, 102, 215, 1) 100%
-  );
+  background-color: #87189d;
   color: white;
-  padding: 8px 15px;
+  padding: 8px 0;
   border-radius: 10px;
   cursor: pointer;
   font-weight: 600;
   height: 100%;
+  width: 130px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .alinoSubmitBtn:disabled {
