--- a/src/components/ui/window-component/WindowComponent.module.css
+++ b/src/components/ui/window-component/WindowComponent.module.css
@@ -10,6 +10,15 @@
   z-index: 100;
 }
 
+.glow {
+  position: absolute;
+  width: auto;
+  height: 150%;
+  z-index: -1;
+  aspect-ratio: 1 / 1;
+  user-select: none;
+}
+
 .windowModal {
   position: relative;
   display: flex;
