--- a/src/app/alino-app/components/initial-user-configuration/InitialUserConfiguration.module.css
+++ b/src/app/alino-app/components/initial-user-configuration/InitialUserConfiguration.module.css
@@ -1,9 +1,20 @@
+.generalContainer {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+
 .container {
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: left;
-  gap: 10px;
+  gap: 20px;
   /* padding: 25px 0; */
   padding-top: 20px;
   padding-bottom: 10px;
@@ -14,8 +25,27 @@
   flex-direction: column;
   gap: 10px;
   font-weight: 300;
+  font-size: 15px;
 }
 
 .subtitle {
   color: var(--text);
+}
+
+.glow {
+  position: absolute;
+  width: auto;
+  height: 150%;
+  aspect-ratio: 1 / 1;
+  user-select: none;
+}
+
+.initialText {
+  color: var(--background-alino-app);
+  font-size: 40px;
+  font-weight: 900;
+  z-index: 1;
+  filter: blur(0.8px);
+  user-select: none;
+  text-align: center;
 }
