--- a/src/app/alino-app/components/notifications/notifications.module.css
+++ b/src/app/alino-app/components/notifications/notifications.module.css
@@ -1,7 +1,5 @@
 .notificationContainer {
-  position: absolute;
-  top: 0;
-  right: 60px;
+  position: relative;
   z-index: 100;
   user-select: none;
 }
@@ -21,7 +19,7 @@
 }
 
 .notificationButton:hover {
-  background-color: var(--hover-color);
+  background-color: var(--background-over-container-hover);
 }
 
 .badge {
@@ -43,9 +41,9 @@
 }
 
 .contentWrapper {
-  min-width: 340px;
-  max-width: 400px;
-  max-height: 400px;
+  min-width: 300px;
+  max-width: 300px;
+  max-height: 300px;
   overflow-y: auto;
   padding: 4px;
 }
@@ -53,7 +51,7 @@
 .statusText {
   text-align: center;
   padding: 20px;
-  color: var(--text-muted);
+  color: var(--text-not-available);
   font-size: 14px;
 }
 
@@ -62,23 +60,31 @@
   padding: 0;
   margin: 0;
   display: flex;
+  justify-content: center;
+  align-items: center;
   flex-direction: column;
   gap: 8px;
 }
 
 .notificationItem {
+  position: relative;
   display: flex;
   flex-direction: column;
+  justify-content: center;
+  align-items: left;
   gap: 5px;
-  padding: 12px;
-  background-color: var(--background-over-container-hover);
+  padding: 10px;
+  /* background-color: var(--background-over-container); */
   border-radius: 6px;
 }
 
 .notificationInfo {
+  position: relative;
   display: flex;
-  flex-direction: column;
-  gap: 4px;
+  justify-content: center;
+  align-items: center;
+  flex-direction: row;
+  gap: 10px;
   font-size: 14px;
   color: var(--text);
 }
@@ -91,7 +97,8 @@
 .notificationActions {
   display: flex;
   gap: 8px;
-  justify-content: flex-end;
+  /* justify-content: flex-end; */
+  padding-left: 50px;
 }
 
 .actionButton {
@@ -109,7 +116,7 @@
 }
 
 .accept {
-  background-color: var(--accent-color);
+  background-color: var(--background-over-container);
   color: white;
 }
 
@@ -117,4 +124,25 @@
   background-color: var(--background-tertiary);
   color: var(--text);
   border: 1px solid var(--border-color);
+}
+
+.configUserIcon {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: relative;
+  width: 40px;
+  height: 40px;
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  border-radius: 100%;
+  aspect-ratio: 1 / 1;
+  background-color: var(--background-container);
+}
+
+.separator {
+  width: 100%;
+  height: 1px;
+  background-color: var(--border-container-color);
 }
