--- a/src/app/alino-app/components/config-section/ConfigSection.module.css
+++ b/src/app/alino-app/components/config-section/ConfigSection.module.css
@@ -1,7 +1,5 @@
 .configSection {
-  position: absolute;
-  top: 0;
-  right: 0;
+  position: relative;
   display: flex;
   justify-content: center;
   align-items: center;
