--- a/src/app/alino-app/components/list-information/InviteUserInput.module.css
+++ b/src/app/alino-app/components/list-information/InviteUserInput.module.css
@@ -18,6 +18,7 @@
 
 .input {
   flex-grow: 1;
+  width: 100%;
   border: none;
   background-color: transparent;
   padding: 12px 15px;
@@ -42,23 +43,31 @@
 
 .button {
   border: none;
-  background-color: #589e1f;
-  color: white;
-  padding: 0 20px;
-  font-size: 14px;
-  font-weight: 500;
+  /* background-color: var(--background-over-container); */
   cursor: pointer;
   transition: background-color 0.2s ease-in-out;
-  white-space: nowrap;
   border-radius: 10px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: transparent;
+  padding-right: 5px;
 }
 
-.button:hover {
-  background-color: #67b924;
-}
+/* .button:hover {
+  background-color: var(--background-over-container-hover);
+} */
 
 .button:disabled {
-  background-color: var(--background-over-container);
-  cursor: not-allowed;
   opacity: 0.7;
+}
+
+@media only screen and (max-width: 850px) {
+  .input {
+    padding: 12px 10px;
+    font-size: 12px;
+  }
+  .deco {
+    font-size: 12px;
+  }
 }
