--- a/src/app/alino-app/components/notifications/notifications.module.css
+++ b/src/app/alino-app/components/notifications/notifications.module.css
@@ -48,6 +48,10 @@
   padding: 4px;
 }
 
+.contentWrapper::-webkit-scrollbar {
+  display: none;
+}
+
 .statusText {
   text-align: center;
   padding: 20px;
@@ -73,7 +77,7 @@
   justify-content: center;
   align-items: left;
   gap: 5px;
-  padding: 10px;
+  padding: 5px 10px;
   /* background-color: var(--background-over-container); */
   border-radius: 6px;
 }
