--- a/src/app/alino-app/components/todo/task-card/task-card.module.css
+++ b/src/app/alino-app/components/todo/task-card/task-card.module.css
@@ -56,6 +56,8 @@
   padding: 5px 10px 5px 10px;
   font-size: 16px;
   color: var(--text);
+  white-space: pre-wrap;
+  word-break: break-word;
 }
 
 .editingButtons {
