--- a/src/app/alino-app/components/sidebar/list-input/ListInput.module.css
+++ b/src/app/alino-app/components/sidebar/list-input/ListInput.module.css
@@ -93,3 +93,10 @@
 .button:hover {
   background-color: var(--hover-over-container);
 }
+
+.sendButton {
+  border: none;
+  background-color: transparent;
+  cursor: pointer;
+  display: flex;
+}
