--- a/src/components/ui/config-menu/config-card/ConfigCard.module.css
+++ b/src/components/ui/config-menu/config-card/ConfigCard.module.css
@@ -12,6 +12,10 @@
   transition: background-color 0.2s ease-in-out;
 }
 
+.options:hover {
+  background-color: var(--background-over-container) !important;
+}
+
 .options p {
   font-size: 14px;
   text-wrap: nowrap;
