--- a/src/app/alino-app/components/initial-user-configuration/InitialUserConfiguration.module.css
+++ b/src/app/alino-app/components/initial-user-configuration/InitialUserConfiguration.module.css
@@ -41,7 +41,7 @@
 }
 
 .initialText {
-  color: var(--background-alino-app);
+  color: var(--background-container);
   font-size: 40px;
   font-weight: 900;
   z-index: 1;
