--- a/src/app/alino-app/components/todo/task-card/task-card.module.css
+++ b/src/app/alino-app/components/todo/task-card/task-card.module.css
@@ -49,11 +49,10 @@
   width: 100%;
   position: relative;
   margin: 0;
-  padding: 0;
   text-wrap: wrap;
   overflow-wrap: break-word;
   border-radius: 10px;
-  padding: 0px 10px 0px 10px;
+  padding: 5px 10px;
   font-size: 16px;
   color: var(--text);
   white-space: pre-wrap;
@@ -134,4 +133,12 @@
 .linkBox svg {
   flex: 0 0 auto;
   display: block;
+}
+
+.note {
+  writing-mode: vertical-rl;
+  transform: rotate(180deg);
+  color: var(--text);
+  opacity: 0.05;
+  font-size: 12px;
 }
