--- a/src/app/alino-app/components/todo/task-card/task-card.module.css
+++ b/src/app/alino-app/components/todo/task-card/task-card.module.css
@@ -7,7 +7,7 @@
   display: flex;
   justify-content: start;
   align-items: start;
-  padding: 10px 15px 10px 15px;
+  padding: 10px 15px 10px 0px;
   gap: 5px;
 }
 
@@ -32,7 +32,7 @@
   border: none;
   outline: none;
   background-color: var(--background-over-container);
-  padding: 5px 10px;
+  padding: 5px 5px;
   font-size: 16px;
   width: 100%;
   resize: none;
@@ -52,7 +52,7 @@
   text-wrap: wrap;
   overflow-wrap: break-word;
   border-radius: 10px;
-  padding: 5px 10px;
+  padding: 5px 5px 5px 10px;
   font-size: 16px;
   color: var(--text);
   white-space: pre-wrap;
@@ -141,4 +141,19 @@
   color: var(--text);
   opacity: 0.05;
   font-size: 12px;
+}
+
+.dropdownItemContainer {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 5px;
+}
+
+.dropdownItemContainer p {
+  white-space: nowrap;
+  text-overflow: ellipsis;
+  width: 100%;
+  overflow: hidden;
+  color: var(--text);
 }
