--- a/src/app/alino-app/components/todo/task-input/task-input.module.css
+++ b/src/app/alino-app/components/todo/task-input/task-input.module.css
@@ -61,7 +61,7 @@
   white-space: pre-wrap;
   word-break: break-word;
   box-sizing: border-box;
-  padding: 5px 5px;
+  padding: 5px 5px 5px 0px;
   width: 100%;
   height: 100%;
 
