--- a/src/components/ui/edit-task-modal/EditTaskModal.module.css
+++ b/src/components/ui/edit-task-modal/EditTaskModal.module.css
@@ -1,24 +1,15 @@
-.backgroundContainer {
-  position: absolute;
-  width: 100%;
-  height: 100%;
+.modalBackdrop {
+  position: fixed;
   top: 0;
   left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+  z-index: 500;
   display: flex;
-  justify-content: center;
-  align-items: center;
-  z-index: 900;
-  backdrop-filter: blur(2px);
-  background-color: var(--background-alino-app-translucent);
 }
 
-.task {
-  width: 100%;
-  height: fit-content;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  overflow: hidden;
-  max-width: 600px;
+.modalContainer {
+  position: absolute;
+  z-index: 501;
 }
