--- a/src/components/ui/edit-task-modal/EditTaskModal.module.css
+++ b/src/components/ui/edit-task-modal/EditTaskModal.module.css
@@ -14,4 +14,22 @@
   top: 15px;
   left: 15px;
   z-index: 501;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  height: fit-content;
+}
+
+.toolsSection {
+  background-color: var(--background-container);
+  height: 40px;
+  width: 50%;
+  margin-top: 15px;
+  border-radius: 15px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  overflow: hidden;
+  gap: 10px;
 }
