--- a/src/app/alino-app/components/todo/manager/manager.module.css
+++ b/src/app/alino-app/components/todo/manager/manager.module.css
@@ -45,6 +45,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  padding: 0px 15px;
 }
 
 /* ///////HOME////// */
@@ -102,7 +103,7 @@
 
 /* //////////////// */
 .configSection {
-  width: 50px;
+  /* width: 50px; */
   height: 75px;
   display: flex;
   justify-content: center;
