--- a/src/app/alino-app/components/todo/task-card/task-card.module.css
+++ b/src/app/alino-app/components/todo/task-card/task-card.module.css
@@ -32,7 +32,7 @@
   border: none;
   outline: none;
   background-color: var(--background-over-container);
-  padding: 5px 5px;
+  padding: 5px 15px 5px 5px;
   font-size: 16px;
   width: 100%;
   resize: none;
@@ -43,6 +43,22 @@
   height: 100%;
   box-sizing: border-box;
   color: var(--text);
+  max-height: 280px;
+  overflow-y: auto;
+}
+
+.nameChangerInput::-webkit-scrollbar {
+  width: 8px;
+}
+
+.nameChangerInput::-webkit-scrollbar-thumb {
+  border-radius: 8px;
+  background: rgba(0, 0, 0, 0.3);
+}
+
+.nameChangerInput::-webkit-scrollbar-track {
+  background: transparent;
+  margin-right: 10px;
 }
 
 .text {
