--- a/src/components/ui/edit-task-modal/EditTaskModal.module.css
+++ b/src/components/ui/edit-task-modal/EditTaskModal.module.css
@@ -9,6 +9,15 @@
   display: flex;
 }
 
+.modalContainerLimit {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+}
+
 .modalContainer {
   position: absolute;
   top: 15px;
