update manager task header

--- a/src/app/alino-app/components/todo/manager/manager.module.css
+++ b/src/app/alino-app/components/todo/manager/manager.module.css
@@ -45,7 +45,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  padding: 0px 15px;
+  padding: 0 15px 0 0;
 }
 
 /* ///////HOME////// */
