--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -48,7 +48,8 @@ body {
   width: 100%;
   font-family: var(--font-inter), sans-serif;
   perspective: 1000px;
-  /* overflow: hidden !important; */
+  overflow: hidden !important;
+  background-color: var(--background-alino-app);
 }
 
 a {
