--- a/src/app/alino-app/components/todo/task-card/task-card.module.css
+++ b/src/app/alino-app/components/todo/task-card/task-card.module.css
@@ -27,6 +27,15 @@
   align-items: center;
 }
 
+@keyframes blink_input_opacity_to_prevent_scrolling_when_focus {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+
 .nameChangerInput {
   border-radius: 10px;
   border: none;
@@ -45,6 +54,7 @@
   color: var(--text);
   max-height: 280px;
   overflow-y: auto;
+  animation: blink_input_opacity_to_prevent_scrolling_when_focus 0.01s;
 }
 
 .nameChangerInput::-webkit-scrollbar {
