--- a/src/app/alino-app/components/sidebar/list-card/ListCard.module.css
+++ b/src/app/alino-app/components/sidebar/list-card/ListCard.module.css
@@ -16,6 +16,24 @@
   cursor: pointer;
 }
 
+.containerDrag {
+  position: relative;
+  overflow: hidden;
+  border-radius: 15px;
+  height: 45px;
+  width: 100%;
+  display: flex;
+  justify-content: start;
+  align-items: center;
+  padding: 7px 10px 7px 10px;
+  gap: 5px;
+  transition: background-color 0.3s ease-in-out;
+  -webkit-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+  cursor: pointer;
+}
+
 .cardFx {
   width: 200px;
   height: 200px;
@@ -25,6 +43,7 @@
   transition: opacity 0.3s ease-in-out;
   z-index: 0;
 }
+
 @media only screen and (min-width: 851px) {
   .container:hover {
     background-color: var(--background-over-container) !important;
@@ -61,7 +80,7 @@
   overflow: hidden;
   white-space: nowrap;
   text-overflow: ellipsis;
-  padding-left: 5px;
+  color: var(--text);
 }
 
 .nameChangerInput {
